--- a/app/views/users/branches_company_user.html.erb
+++ b/app/views/users/branches_company_user.html.erb
@@ -25,18 +25,7 @@
 
             <% end %>
 
-
-            <div class="pagination">
-              <ul>
-                <li><a href="#">&laquo;</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">&raquo;</a></li>
-              </ul>
-            </div>
+            <%= paginate @branches %>
 
 
           </article>
