--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,7 @@
                 <li><a href="#">Quiénes Somos</a></li>
                 <li><a href="#">Trabajá con Nosotros</a></li>
                 <li><a href="#">Términos y Condiciones</a></li>
-                <li><a href="#">Ayuda</a></li>
+                <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
                 <li><a href="#">Contacto</a></li>
               </ul>
             </nav>
