cine & teatro images

--- a/app/views/users/titles_user.html.erb
+++ b/app/views/users/titles_user.html.erb
@@ -17,7 +17,7 @@
               <div class="my-span2" style="width: 135px">
               <div class="roundedTwo" >
                 <%= check_box_tag "title_ids[]", p.id, @user.client.prefer(p.name), :id => p.id %>
-                <label for="<%= p.id %>" style="background: url('../assets/<%= p.icon_name%>.jpg') no-repeat no-repeat; background-size: 100px"></label>
+                <label for="<%= p.id %>" style="background: url('../assets/<%= p.icon_name%>.png') no-repeat no-repeat; background-size: 100px"></label>
               </div>
               </div>
 
