Back validations and missing translations

--- a/app/views/admin/companies/_form.html.erb
+++ b/app/views/admin/companies/_form.html.erb
@@ -4,17 +4,17 @@
 
     <div>
       <%=f.inputs "Info de Usuario" , :for => [:user, f.object.user || User.new] do |h|%>
-          <%=h.input :email, :label => "Email" %>
-          <%=h.input :password, :label => "Password" %>
-          <%=h.input :password_confirmation, :label => "Repeat Password" %>
-          <%=h.hidden_field :user_role_id, :label => "Role",:required => true, :value => UserRole.where("name = ?", "CompanyUser" ).first() %>
+          <%=h.input :email %>
+          <%=h.input :password %>
+          <%=h.input :password_confirmation %>
+          <%=h.hidden_field :user_role_id, :label => "Role", :value => UserRole.where("name = ?", "CompanyUser" ).first() %>
       <% end %>
     </div>
 
     <div>
     <%=f.inputs "Info de Empresa" do%>
-        <%= f.input :name, :label => "Name" %>
-        <%= f.input :cuit, :label => "CUIT"%>
+        <%= f.input :name %>
+        <%= f.input :cuit %>
     <%end%>
     </div>
 
