Fix user_role ids and layout

--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -23,7 +23,7 @@
 
                   <div class="control-group clearfix">
                     <label class="pull-left" for="inputEmail">Fecha de inicio</label>
-                    <%=f.input :start_date, :as => :string, :input_html => {:class => 'datepicker pull-right input-medium '}, :label => false %>
+                    <%=f.input :start_date, :as => :date, :input_html => {:class => 'datepicker pull-right input-medium '}, :label => false %>
                   </div>
 
                   <div class="control-group clearfix">
