--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,13 +80,13 @@
                       <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu pull-right">
-                      <% if current_user.user_role_id == 1%>
+                      <% if current_user.company? %>
                         <li><a href="<%= users_offers_company_user_path %>">Mis Ofertas</a></li>
                       <% else %>
                           <li><a href="<%= users_offers_client_user_path %>">Mis Ofertas</a></li>
                       <% end %>
                       <li><a href="<%= edit_user_path(current_user) %>">Mi Perfil</a></li>
-                      <% if current_user.user_role_id == 1%>
+                      <% if current_user.company? %>
                         <li><a href="<%= users_branches_company_user_path %>">Mis sucursales</a></li>
                       <%else%>
                         <li><a href="<%= users_titles_user_path %>">Mis Intereses</a></li>
