--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -23,12 +23,12 @@
 
                   <div class="control-group clearfix">
                     <label class="pull-left" for="inputEmail">Fecha de inicio</label>
-                    <%=f.input :start_date, :as => :date, :input_html => {:class => 'datepicker pull-right input-medium '}, :label => false %>
+                    <%=f.input :start_date, :as => :string, :input_html => {:class => 'datepicker pull-right input-medium datepicker'}, :label => false %>
                   </div>
 
                   <div class="control-group clearfix">
                     <label class="pull-left" for="inputEmail">Sucursal</label>
-                    <%=f.input :branch,:input_html => {:class => 'datepicker pull-right input-medium-large '}, :label => false, :required => true, :as => :select, :prompt => "Seleccione Sucursal", :collection => Branch.where("company_id = ?", Company.where("user_id = ?", current_user.id)) %>
+                    <%=f.input :branch,:input_html => {:class => 'pull-right input-medium-large '}, :label => false, :required => true, :as => :select, :prompt => "Seleccione Sucursal", :collection => Branch.where("company_id = ?", Company.where("user_id = ?", current_user.id)) %>
 
                  </div>
 
@@ -46,7 +46,7 @@
 
                   <div class="control-group clearfix">
                     <label class="pull-left" for="inputEmail">Fecha de fin</label>
-                    <%=f.input :end_date,:as => :string, :input_html => {:class => 'datepicker pull-right input-medium '}, :label => false %>
+                    <%=f.input :end_date,:as => :string, :input_html => {:class => 'datepicker pull-right input-medium datepicker'}, :label => false %>
                   </div>
 
 
@@ -135,3 +135,25 @@
     </aside><!--end sidebar-->
   </div><!--end container-->
 </div><!--end row-->
+
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+
+<script>
+    $(function() {
+        $( '.datepicker' ).datepicker({
+            dateFormat: "dd-mm-yy",
+            firstDay: 1,
+            dayNamesMin: ["Do", "Lu", "Ma", "Mi", "Ju", "Vi", "Sa"],
+            dayNamesShort: ["Dom", "Lun", "Mar", "Mie", "Jue", "Vie", "Sab"],
+            monthNames:
+                    ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio",
+                        "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"],
+            monthNamesShort:
+                    ["Ene", "Feb", "Mar", "Abr", "May", "Jun",
+                        "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"]
+        });
+    });
+
+</script>
