--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 
-<% if current_user.user_role_id == 2%>
+<% if ! current_user.company? %>
 
 <div class="container" id="main-content">
   <div class="row">
@@ -144,7 +144,7 @@
   </div><!--end container-->
 </div><!--end row-->
 
-<% elsif  current_user.user_role_id == 1%>
+<% elsif  current_user.company? %>
 
     <div class="container" id="main-content">
       <div class="row">
