--- a/app/views/pages/we.html.erb
+++ b/app/views/pages/we.html.erb
@@ -63,7 +63,7 @@
       <div class="row">
         <section class="span12">
           <header class="out">
-            <h2>dealhunter es tu club privado de viajes y escapadas premium.</h2>
+            <h2>Acerca de Dealhunter</h2>
           </header>
 
           <div class="wrapper-padding">
