--- a/app/views/pages/faqs.html.erb
+++ b/app/views/pages/faqs.html.erb
@@ -162,7 +162,7 @@
           <div class="span7">
             <nav>
               <ul class="inline">
-                <li><a href="#">Quiénes Somos</a></li>
+                <li><a href="<%= pages_we_path %>">Quiénes Somos</a></li>
                 <li><a href="#">Trabajá con Nosotros</a></li>
                 <li><a href="#">Términos y Condiciones</a></li>
                 <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
