--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -98,8 +98,8 @@
         <div class="span7">
           <nav>
             <ul class="inline">
-              <li><a href="#">Quiénes Somos</a></li>
-              <li><a href="<%= pages_we_path %>">Trabajá con Nosotros</a></li>
+              <li><a href="<%= pages_we_path %>">Quiénes Somos</a></li>
+              <li><a href="<%= pages_work_with_us_path %>">Trabajá con Nosotros</a></li>
               <li><a href="#">Términos y Condiciones</a></li>
               <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
               <li><a href="#">Contacto</a></li>
