--- a/app/views/pages/work_with_us.html.erb
+++ b/app/views/pages/work_with_us.html.erb
@@ -99,7 +99,7 @@
             <div class="wrapper">
               <article class="row-fluid">
                 <div class="span8">
-                  <form>
+                  <%= form_for @message, :url => pages_contact_path do |form| %>
                     <fieldset>
 
                       <p>En este momento no tenemos busquedas abiertas. Sin embargo, siempre estamos buscando gente calificada y nos gustaría saber de vos. Completá los campos del formulario para que guardemos tu información.</p>
@@ -109,32 +109,25 @@
                       <div class="row-fluid">
                         <div class="span6">
                           <label>Nombre</label>
-                          <input type="text" placeholder="" class="input-xlarge">
+                          <%= form.text_field :name, :class =>"input_xlarge" %>
 
-                          <label>Email</label>
-                          <input type="text" placeholder="" class="input-xlarge">
+
                         </div>
                         <div class="span6">
-                          <label>Apellido</label>
-                          <input type="text" placeholder="" class="input-xlarge">
-                          <div class="control-group">
-                            <label class="control-label" for="input04">Subí tu CV</label>
-                            <div class="controls">
-                              <input type="file" class="input-large" id="input04" style="width:30px !important;">
-                            </div>
-                          </div>
+                          <label>Email</label>
+                          <%= form.text_field :email, :class =>"input_xlarge" %>
+
                         </div>
                       </div>
 
-                      <label>Comentarios</label>
-                      <textarea class="" rows="3" style="width:97.8%;" placeholder=""></textarea>
+                      <label>Mensaje/Datos de interes</label>
+                      <%= form.text_area :body, :rows =>3, :style =>"width:97.8%;" %>
                       <hr>
                       <div class="text-center">
                         <button type="submit" class="btn btn-dealhunter">Enviar</button>
                       </div>
                     </fieldset>
-                  </form>
-
+                    <% end %>
 
                 </div> <!--end span8-->
                 <div class="span3 offset1">
@@ -171,19 +164,9 @@
     </div><!--end row-->
 
 
-    <!--footer-->
-    <footer id="footer-wrapper">
-      <div class="container" >
-        <div class="row" id="footer-top">
-          <div class="span6 hidden-phone"><img id="footer-top-img" src="/assets/logo-footer.png"></div>
-          <div class="span6">
-            <ul id="custumer-support" class="pull-right">
-              <li class="custumer-support-title">Atención al Cliente</li>
-              <li class="telephone-number">0800-345-TRIP(8747)</li>
-              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
-            </ul>
-          </div>
-        </div>
+    <footer id="footer-wrapper" class="dh-footer">
+      <div class="container">
+
 
         <hr>
 
@@ -191,35 +174,127 @@
           <div class="span7">
             <nav>
               <ul class="inline">
-                <li><a href="/pages/we">Quiénes Somos</a></li>
-                <li><a href="/pages/work_with_us">Trabajá con Nosotros</a></li>
-                <li><a href="/pages/terms_and_conds">Términos y Condiciones</a></li>
-                <li><a href="/pages/faqs">Ayuda</a></li>
-                <li><a href="/pages/contact">Contacto</a></li>
+                <li><a href="<%= pages_we_path %>">Quiénes Somos</a></li>
+                <li><a href="<%= pages_work_with_us_path %>">Trabajá con Nosotros</a></li>
+                <li><a href="#">Términos y Condiciones</a></li>
+                <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
+                <li><a href="#">Contacto</a></li>
               </ul>
             </nav>
-            <p class="copyright">Copyright © 2013 dealhunter.com. Todos los derechos reservados</p>
+            <p class="copyright">Copyright © 2013 DealHunter.com. Todos los derechos reservados</p>
+          </div>
+          <div class="span3">
+            <ul id="custumer-support" class="pull-right">
+              <li class="custumer-support-title">Atención al Cliente</li>
+              <li class="telephone-number">0800-111-DEAL(3315)</li>
+              <li class="contact-mail"><a href="#"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
+            </ul>
           </div>
 
-          <div class="span5">
+          <div class="span2">
             <ul class="inline pull-right social">
-              <li><a href="http://www.facebook.com/dealhunterargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
+              <li><a href="#" target="_blank"><img src="/assets/icon-fb.png"></a></li>
               <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
-              <li><a href="https://plus.google.com/116522684361738618061" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
+              <li><a href="#" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
             </ul>
           </div>
         </div>
 
       </div>
+    </footer>
 
-
-
-    </footer><!--end footer-->
 
 
 
 <% else %>
+
+
+    <html>
+    <head>
+      <meta charset="UTF-8">
+      <title>dealhunter</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="">
+      <meta name="author" content="">
+      <!-- Le styles -->
+
+      <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+      <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+      <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+      <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+
+      <script src="../assets/bootstrap-dropdown.js"></script>
+
+
+      <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
+      <script src="/assets/jquery_ujs.js?body=1" type="text/javascript"></script>
+      <script src="/assets/jquery-ui.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/lib/namespace.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/components/jquery.aa.checkbox-toggler.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/components/jquery.aa.dropdown-menu.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/components/jquery.aa.popover.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/components/jquery.aa.table-checkbox-toggler.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/pages/application.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/pages/batch_actions.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/application.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin/base.js?body=1" type="text/javascript"></script>
+      <script src="/assets/jquery_nested_form.js?body=1" type="text/javascript"></script>
+      <script src="/assets/jquery.tagsinput.js?body=1" type="text/javascript"></script>
+      <script src="/assets/jquery.tokeninput.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap.js?body=1" type="text/javascript"></script>
+      <script src="/assets/active_admin.js?body=1" type="text/javascript"></script>
+      <script src="/assets/batches.js?body=1" type="text/javascript"></script>
+      <script src="/assets/billings.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap-alert.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap-collapse.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap-dropdown.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap-filestyle-0.1.0.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap-modal.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap-tab.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap-transition.js?body=1" type="text/javascript"></script>
+      <script src="/assets/bootstrap.min.js?body=1" type="text/javascript"></script>
+      <script src="/assets/carousel/helper-plugins/jquery.ba-throttle-debounce.min.js?body=1" type="text/javascript"></script>
+      <script src="/assets/carousel/helper-plugins/jquery.mousewheel.min.js?body=1" type="text/javascript"></script>
+      <script src="/assets/carousel/helper-plugins/jquery.touchSwipe.min.js?body=1" type="text/javascript"></script>
+      <script src="/assets/carousel/helper-plugins/jquery.transit.min.js?body=1" type="text/javascript"></script>
+      <script src="/assets/carousel/jquery-1.8.2.min.js?body=1" type="text/javascript"></script>
+      <script src="/assets/carousel/jquery.carouFredSel-6.2.0-packed.js?body=1" type="text/javascript"></script>
+      <script src="/assets/carousel/jquery.carouFredSel-6.2.0.js?body=1" type="text/javascript"></script>
+      <script src="/assets/credits.js?body=1" type="text/javascript"></script>
+      <script src="/assets/faqs.js?body=1" type="text/javascript"></script>
+      <script src="/assets/html5shiv.js?body=1" type="text/javascript"></script>
+      <script src="/assets/jcalendar.js?body=1" type="text/javascript"></script>
+      <script src="/assets/jquery.tipsy.js?body=1" type="text/javascript"></script>
+      <script src="/assets/pages.js?body=1" type="text/javascript"></script>
+      <script src="/assets/slider/jquery-1.9.0.min.js?body=1" type="text/javascript"></script>
+      <script src="/assets/slider/jquery.nivo.slider.js?body=1" type="text/javascript"></script>
+      <script src="/assets/slider/jquery.nivo.slider.pack.js?body=1" type="text/javascript"></script>
+      <script src="/assets/trip_advisor_comments.js?body=1" type="text/javascript"></script>
+      <script src="/assets/application.js?body=1" type="text/javascript"></script>
+
+      <!--    <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
+      -->
+      <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+      <!--[if lt IE 9]>
+      <script src="/assets/html5shiv.js"></script>
+      <![endif]-->
+
+    </head>
+
+
+    <body id="page-micuenta">
+
+    <!--header-->
+    <header id="top">
+      <div class="container">
+        <div class="row">
+          <div class="span3" id="logo-header"><a href="/offers"><img src="/assets/logo-header.png"></a></div>
+
+        </div><!--end row-->
+      </div><!--end container header-->
+    </header><!--end header-->
+
 
 
     <div class="container" id="main-content">
@@ -234,7 +309,7 @@
             <div class="wrapper">
               <article class="row-fluid">
                 <div class="span8">
-                  <form>
+                  <%= form_for @message, :url => pages_contact_path do |form| %>
                     <fieldset>
 
                       <p>En este momento no tenemos busquedas abiertas. Sin embargo, siempre estamos buscando gente calificada y nos gustaría saber de vos. Completá los campos del formulario para que guardemos tu información.</p>
@@ -244,31 +319,25 @@
                       <div class="row-fluid">
                         <div class="span6">
                           <label>Nombre</label>
-                          <input type="text" placeholder="" class="input-xlarge">
+                          <%= form.text_field :name, :class =>"input_xlarge" %>
 
-                          <label>Email</label>
-                          <input type="text" placeholder="" class="input-xlarge">
+
                         </div>
                         <div class="span6">
-                          <label>Apellido</label>
-                          <input type="text" placeholder="" class="input-xlarge">
-                          <div class="control-group">
-                            <label class="control-label" for="input04">Subí tu CV</label>
-                            <div class="controls">
-                              <input type="file" class="input-large" id="input04" style="width:30px !important;">
-                            </div>
-                          </div>
+                          <label>Email</label>
+                          <%= form.text_field :email, :class =>"input_xlarge" %>
+
                         </div>
                       </div>
 
-                      <label>Comentarios</label>
-                      <textarea class="" rows="3" style="width:97.8%;" placeholder=""></textarea>
+                      <label>Mensaje/Datos de interes</label>
+                      <%= form.text_area :body, :rows =>3, :style =>"width:97.8%;" %>
                       <hr>
                       <div class="text-center">
                         <button type="submit" class="btn btn-dealhunter">Enviar</button>
                       </div>
                     </fieldset>
-                  </form>
+                  <% end %>
 
 
                 </div> <!--end span8-->
@@ -304,6 +373,7 @@
         </section><!--end main content-->
       </div><!--end container-->
     </div><!--end row-->
+
 
 <% end %>
 
