Contact mailer view

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -163,6 +163,8 @@
 <% else %>
 
 
+    <body id="page-micuenta">
+
     <div class="container" id="main-content">
       <div class="row">
         <section class="span12">
